updated vignette with analysis data and pushing v1.0.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chessR
 Type: Package
 Title: A Package To Extract and Analyse chess.com Data
-Version: 0.1.0
+Version: 1.0.0
 Authors@R: person("Jason Zivkovic", email = "jase.ziv83@gmail.com",
                   role = c("aut", "cre"))
 Description: This package will enable users to extract chess game data from the popular chess site chess.com and then perform analysis on that game data.
@@ -15,7 +15,8 @@ Imports:
     tidyr,
     stringr,
     lubridate,
-    magrittr
+    magrittr,
+    scales
 RoxygenNote: 7.0.0
 Suggests: knitr,
     rmarkdown,
