--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,18 @@ export(get_game_data)
 export(get_game_ending)
 export(get_raw_chessdotcom)
 export(get_raw_game_data)
+export(get_raw_lichess)
 export(get_top50_leaderboard)
 export(get_winner)
+export(lichess_leaderboard)
 export(return_num_moves)
+import(curl)
 import(dplyr)
 import(jsonlite)
 import(lubridate)
 import(magrittr)
 import(purrr)
+import(rvest)
 import(stringr)
 import(tidyr)
+import(xml2)
