updated description to include multiple platforms

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: chessR
 Type: Package
-Title: A Package To Extract and Analyse chess.com Data
+Title: A R Package To Extract and Analyse Online Chess Game Data
 Version: 1.2.0
 Authors@R: person("Jason Zivkovic", email = "jase.ziv83@gmail.com",
                   role = c("aut", "cre"))
 URL: https://jaseziv.github.io/chessR/, https://github.com/JaseZiv/chessR
 BugReports: https://github.com/JaseZiv/chessR/issues
-Description: This package will enable users to extract chess game data from the popular chess site chess.com and then perform analysis on that game data.
+Description: This R package will enable users to extract chess game data from popular chess sites, including lichess.org and chess.com and then perform analysis on that game data.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
