--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,5 @@ export(get_top50_leaderboard)
 export(get_winner)
 export(lichess_leaderboard)
 export(return_num_moves)
-import(curl)
-import(dplyr)
-import(jsonlite)
-import(lubridate)
-import(magrittr)
-import(purrr)
-import(rvest)
-import(stringr)
-import(tidyr)
-import(xml2)
+importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
