--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,16 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis\.yml$
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
+^codecov\.yml$
+^README\.Rmd$
+LICENSE
+^\.travis\.yml$
+^.github$
+^CONDUCT\.md
+^CONDUCT\.md$
+^revdep$
+^cran-comments\.md$
+^CRAN-RELEASE$
+^img
