--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,12 @@
 comment: false
 
+comment: false
+language: R
+sudo: false
+cache: packages
+after_success:
+- Rscript -e 'covr::codecov()'
+
 coverage:
   status:
     project:
