fix codecov workflow

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN}}
 
     steps:
       - uses: actions/checkout@v2
@@ -26,5 +27,5 @@ jobs:
           extra-packages: covr
 
       - name: Test coverage
-        run: covr::codecov(token = ${{ secrets.CODECOV_TOKEN}})
+        run: covr::codecov()
         shell: Rscript {0}
