--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(get_raw_chessdotcom)
 export(get_raw_lichess)
 export(get_winner)
 export(lichess_leaderboard)
-export(plot_game)
+export(plot_moves)
 export(return_num_moves)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
