added documentation and tidied function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_game_ending)
 export(get_raw_chessdotcom)
 export(get_raw_lichess)
 export(get_winner)
+export(lichess_clock_move_time)
 export(lichess_leaderboard)
 export(plot_moves)
 export(return_num_moves)
