--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: 2.14.2
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.4
 pkgdown_sha: ~
 articles:
   using_chessR_package: using_chessR_package.html
-last_built: 2022-01-20T20:28Z
+last_built: 2022-08-09T11:00Z
 urls:
-  reference: https://jaseziv.github.io/chessR//reference
-  article: https://jaseziv.github.io/chessR//articles
+  reference: https://jaseziv.github.io/chessR/reference
+  article: https://jaseziv.github.io/chessR/articles
 
